@@ -55,7 +55,7 @@ class Check(object):
         for obj in objects:
             if isinstance(obj, Resource):
                 self.resources.append(obj)
-                if not self.name:
+                if self.name == '':
                     self.name = self.resources[0].name
             elif isinstance(obj, Context):
                 self.contexts.add(obj)
@@ -116,7 +116,8 @@ class Check(object):
 
         The most significant (=worst) state seen in :attr:`results` to
         far. :obj:`~nagiosplugin.state.Unknown` if no results have been
-        collected yet. Corresponds with :attr:`exitcode`.
+        collected yet. Corresponds with :attr:`exitcode`. Read-only
+        property.
         """
         try:
             return self.results.most_significant_state
@@ -129,7 +130,7 @@ class Check(object):
 
         The first line of output that summarizes that situation as
         perceived by the check. The string is usually queried from a
-        :class:`Summary` object.
+        :class:`Summary` object. Read-only property.
         """
         if not self.results:
             return self.summary.empty() or ''
@@ -142,7 +143,7 @@ class Check(object):
         """Additional lines of output.
 
         Long text output if check runs in verbose mode. Also queried
-        from :class:`~nagiosplugin.summary.Summary`.
+        from :class:`~nagiosplugin.summary.Summary`. Read-only property.
         """
         return self.summary.verbose(self.results) or ''
 
@@ -150,7 +151,7 @@ class Check(object):
     def exitcode(self):
         """Overall check exit code according to the Nagios API.
 
-        Corresponds with :attr:`state`.
+        Corresponds with :attr:`state`. Read-only property.
         """
         try:
             return int(self.results.most_significant_state)
